# u2-mcp

./: .env.sample  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  test_connection.py
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
docs/: configuration.md  installation.md
src/u2_mcp/: config.py  connection.py  server.py
src/u2_mcp/auth/: provider.py  storage.py
src/u2_mcp/auth/idp/: __init__.py
src/u2_mcp/resources/: __init__.py  examples.py  syntax_help.py
src/u2_mcp/tools/: __init__.py  dictionary.py  files.py  knowledge.py  query.py  subroutine.py
src/u2_mcp/utils/: audit.py  knowledge.py  safety.py  watchdog.py
tests/: conftest.py  test_config.py
tests/mocks/: mock_uopy.py
tests/test_utils/: test_dynarray.py  test_safety.py
